k8s/minecraft-server/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  labels:
    app: minecraft-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-server
  template:
    metadata:
      labels:
        app: minecraft-server
    spec:
      nodeSelector:
        machine: bastion
      containers:
      - name: minecraft-server
        image: itzg/minecraft-server:latest
        resources:
          limits:
            memory: 6Gi
          requests:
            memory: 4Gi
        ports:
        - containerPort: 25565
          name: minecraft
        - containerPort: 8080
          name: dynmap
        volumeMounts:
          - name: minecraft-data
            mountPath:  /data
      volumes:
      - name: minecraft-data
        nfs:
          server: 192.168.0.4
          path: /mnt/nfs/ben-challenge
