k8s/minecraft-server/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server-svc
  labels:
    app: minecraft-server
spec:
  type: NodePort
  ports:
    - port: 25565
      nodePort: 30001
  selector:
    app: minecraft-server
