k8s/minecraft-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dynmap-ingress
  namespace: minecraft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mc.cjcocokrisp.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft-server-svc
            port:
              number: 8080
